Add GA and fix XML parse error

--- a/extension/background.html
+++ b/extension/background.html
@@ -1,2 +1,4 @@
 <script src="https://apis.google.com/js/client.js"></script>
+<script src="lib/xml-escape.js"></script>
 <script src="background.js"></script>
+<script src="tracker.js"></script>
